--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -29,6 +29,7 @@
 	pop = stash pop
 	wip = commit -a -m \"[ci skip] WIP WIP WIP WIP WIP\"
 	re = reset --soft HEAD~
+	ri = rebase -i
 [filter "media"]
 	required = true
 	clean = git media clean %f
