--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -36,6 +36,8 @@
 	ri = rebase -i
 	su = submodule update
 	shallow = clone --depth 1
+	[fetch]
+		prune = true
 [filter "media"]
 	required = true
 	clean = git media clean %f
